@@ -21,9 +21,11 @@
 package net.sf.marineapi.nmea.parser;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 import net.sf.marineapi.nmea.sentence.HDGSentence;
+import net.sf.marineapi.nmea.sentence.SentenceId;
 import net.sf.marineapi.nmea.sentence.TalkerId;
 
 import org.junit.Before;
@@ -45,6 +47,31 @@ public class HDGTest {
     @Before
     public void setUp() throws Exception {
         hdg = new HDGParser(EXAMPLE);
+    }
+
+    /**
+     * Test method for {@link net.sf.marineapi.nmea.parser.HDGParser(TalkerId)}.
+     */
+    @Test
+    public void testConstructor() {
+        HDGSentence empty = new HDGParser(TalkerId.HC);
+        assertEquals(TalkerId.HC, empty.getTalkerId());
+        assertEquals(SentenceId.HDG.toString(), empty.getSentenceId());
+        try {
+            empty.getHeading();
+        } catch (DataNotAvailableException e) {
+            // pass
+        } catch (Exception e) {
+            fail(e.getMessage());
+        }
+    }
+
+    /**
+     * Test method for {@link net.sf.marineapi.nmea.parser.HDTParser#isTrue()}.
+     */
+    @Test
+    public void testIsTrue() {
+        assertFalse(hdg.isTrue());
     }
 
     /**
