@@ -12,6 +12,8 @@ NEW FEATURES
 
 * Support for HDG, HDM and HDT sentences; the vessel's magnetic/true heading
   and magnetic variation/deviation.
+  
+* Common interface HeadingSentence for sentences that provide heading.
 
 * Suppport for MWV sentences; wind speed and angle.
  
